@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2023 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,9 +16,9 @@
 
 package org.springframework.web.service.invoker;
 
+import java.lang.reflect.AnnotatedElement;
 import java.lang.reflect.Method;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
@@ -33,7 +33,11 @@ import org.springframework.core.KotlinDetector;
 import org.springframework.core.MethodParameter;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.core.ReactiveAdapter;
-import org.springframework.core.annotation.AnnotatedElementUtils;
+import org.springframework.core.annotation.MergedAnnotation;
+import org.springframework.core.annotation.MergedAnnotationPredicates;
+import org.springframework.core.annotation.MergedAnnotations;
+import org.springframework.core.annotation.MergedAnnotations.SearchStrategy;
+import org.springframework.core.annotation.RepeatableContainers;
 import org.springframework.core.annotation.SynthesizingMethodParameter;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
@@ -55,6 +59,7 @@ import org.springframework.web.service.annotation.HttpExchange;
  * @author Rossen Stoyanchev
  * @author Sebastien Deleuze
  * @author Olga Maciaszek-Sharma
+ * @author Sam Brannen
  * @since 6.0
  */
 final class HttpServiceMethod {
@@ -139,15 +144,14 @@ final class HttpServiceMethod {
 			int index = i;
 			Assert.state(resolved, () ->
 					"Could not resolve parameter [" + this.parameters[index].getParameterIndex() + "] in " +
-							this.parameters[index].getExecutable().toGenericString() +
-							(StringUtils.hasText("No suitable resolver") ? ": " + "No suitable resolver" : ""));
+							this.parameters[index].getExecutable().toGenericString() + ": No suitable resolver");
 		}
 	}
 
 
 	/**
 	 * Factory for {@link HttpRequestValues} with values extracted from the type
-	 * and method-level {@link HttpExchange @HttpRequest} annotations.
+	 * and method-level {@link HttpExchange @HttpExchange} annotations.
 	 */
 	private record HttpRequestValuesInitializer(
 			@Nullable HttpMethod httpMethod, @Nullable String url,
@@ -179,32 +183,40 @@ final class HttpServiceMethod {
 				Method method, Class<?> containingClass, @Nullable StringValueResolver embeddedValueResolver,
 				Supplier<HttpRequestValues.Builder> requestValuesSupplier) {
 
-			HttpExchange annot1 = AnnotatedElementUtils.findMergedAnnotation(containingClass, HttpExchange.class);
-			HttpExchange annot2 = AnnotatedElementUtils.findMergedAnnotation(method, HttpExchange.class);
+			List<AnnotationDescriptor> methodHttpExchanges = getAnnotationDescriptors(method);
+			Assert.state(!methodHttpExchanges.isEmpty(),
+					() -> "Expected @HttpExchange annotation on method " + method);
+			Assert.state(methodHttpExchanges.size() == 1,
+					() -> "Multiple @HttpExchange annotations found on method %s, but only one is allowed: %s"
+							.formatted(method, methodHttpExchanges));
 
-			Assert.notNull(annot2, "Expected HttpRequest annotation");
+			List<AnnotationDescriptor> typeHttpExchanges = getAnnotationDescriptors(containingClass);
+			Assert.state(typeHttpExchanges.size() <= 1,
+					() -> "Multiple @HttpExchange annotations found on %s, but only one is allowed: %s"
+							.formatted(containingClass, typeHttpExchanges));
 
-			HttpMethod httpMethod = initHttpMethod(annot1, annot2);
-			String url = initUrl(annot1, annot2, embeddedValueResolver);
-			MediaType contentType = initContentType(annot1, annot2);
-			List<MediaType> acceptableMediaTypes = initAccept(annot1, annot2);
+			HttpExchange methodAnnotation = methodHttpExchanges.get(0).httpExchange;
+			HttpExchange typeAnnotation = (!typeHttpExchanges.isEmpty() ? typeHttpExchanges.get(0).httpExchange : null);
+
+			HttpMethod httpMethod = initHttpMethod(typeAnnotation, methodAnnotation);
+			String url = initUrl(typeAnnotation, methodAnnotation, embeddedValueResolver);
+			MediaType contentType = initContentType(typeAnnotation, methodAnnotation);
+			List<MediaType> acceptableMediaTypes = initAccept(typeAnnotation, methodAnnotation);
 
 			return new HttpRequestValuesInitializer(
 					httpMethod, url, contentType, acceptableMediaTypes, requestValuesSupplier);
 		}
 
 		@Nullable
-		private static HttpMethod initHttpMethod(@Nullable HttpExchange typeAnnot, HttpExchange annot) {
-
-			String value1 = (typeAnnot != null ? typeAnnot.method() : null);
-			String value2 = annot.method();
-
-			if (StringUtils.hasText(value2)) {
-				return HttpMethod.valueOf(value2);
+		private static HttpMethod initHttpMethod(@Nullable HttpExchange typeAnnotation, HttpExchange methodAnnotation) {
+			String methodLevelMethod = methodAnnotation.method();
+			if (StringUtils.hasText(methodLevelMethod)) {
+				return HttpMethod.valueOf(methodLevelMethod);
 			}
 
-			if (StringUtils.hasText(value1)) {
-				return HttpMethod.valueOf(value1);
+			String typeLevelMethod = (typeAnnotation != null ? typeAnnotation.method() : null);
+			if (StringUtils.hasText(typeLevelMethod)) {
+				return HttpMethod.valueOf(typeLevelMethod);
 			}
 
 			return null;
@@ -212,62 +224,95 @@ final class HttpServiceMethod {
 
 		@Nullable
 		private static String initUrl(
-				@Nullable HttpExchange typeAnnot, HttpExchange annot, @Nullable StringValueResolver embeddedValueResolver) {
+				@Nullable HttpExchange typeAnnotation, HttpExchange methodAnnotation,
+				@Nullable StringValueResolver embeddedValueResolver) {
 
-			String url1 = (typeAnnot != null ? typeAnnot.url() : null);
-			String url2 = annot.url();
+			String typeLevelUrl = (typeAnnotation != null ? typeAnnotation.url() : null);
+			String methodLevelUrl = methodAnnotation.url();
 
 			if (embeddedValueResolver != null) {
-				url1 = (url1 != null ? embeddedValueResolver.resolveStringValue(url1) : null);
-				url2 = embeddedValueResolver.resolveStringValue(url2);
+				typeLevelUrl = (typeLevelUrl != null ? embeddedValueResolver.resolveStringValue(typeLevelUrl) : null);
+				methodLevelUrl = embeddedValueResolver.resolveStringValue(methodLevelUrl);
 			}
 
-			boolean hasUrl1 = StringUtils.hasText(url1);
-			boolean hasUrl2 = StringUtils.hasText(url2);
+			boolean hasTypeLevelUrl = StringUtils.hasText(typeLevelUrl);
+			boolean hasMethodLevelUrl = StringUtils.hasText(methodLevelUrl);
 
-			if (hasUrl1 && hasUrl2) {
-				return (url1 + (!url1.endsWith("/") && !url2.startsWith("/") ? "/" : "") + url2);
+			if (hasTypeLevelUrl && hasMethodLevelUrl) {
+				return (typeLevelUrl + (!typeLevelUrl.endsWith("/") && !methodLevelUrl.startsWith("/") ? "/" : "") + methodLevelUrl);
 			}
 
-			if (!hasUrl1 && !hasUrl2) {
+			if (!hasTypeLevelUrl && !hasMethodLevelUrl) {
 				return null;
 			}
 
-			return (hasUrl2 ? url2 : url1);
+			return (hasMethodLevelUrl ? methodLevelUrl : typeLevelUrl);
 		}
 
 		@Nullable
-		private static MediaType initContentType(@Nullable HttpExchange typeAnnot, HttpExchange annot) {
-
-			String value1 = (typeAnnot != null ? typeAnnot.contentType() : null);
-			String value2 = annot.contentType();
-
-			if (StringUtils.hasText(value2)) {
-				return MediaType.parseMediaType(value2);
+		private static MediaType initContentType(@Nullable HttpExchange typeAnnotation, HttpExchange methodAnnotation) {
+			String methodLevelContentType = methodAnnotation.contentType();
+			if (StringUtils.hasText(methodLevelContentType)) {
+				return MediaType.parseMediaType(methodLevelContentType);
 			}
 
-			if (StringUtils.hasText(value1)) {
-				return MediaType.parseMediaType(value1);
+			String typeLevelContentType = (typeAnnotation != null ? typeAnnotation.contentType() : null);
+			if (StringUtils.hasText(typeLevelContentType)) {
+				return MediaType.parseMediaType(typeLevelContentType);
 			}
 
 			return null;
 		}
 
 		@Nullable
-		private static List<MediaType> initAccept(@Nullable HttpExchange typeAnnot, HttpExchange annot) {
-
-			String[] value1 = (typeAnnot != null ? typeAnnot.accept() : null);
-			String[] value2 = annot.accept();
-
-			if (!ObjectUtils.isEmpty(value2)) {
-				return MediaType.parseMediaTypes(Arrays.asList(value2));
+		private static List<MediaType> initAccept(@Nullable HttpExchange typeAnnotation, HttpExchange methodAnnotation) {
+			String[] methodLevelAccept = methodAnnotation.accept();
+			if (!ObjectUtils.isEmpty(methodLevelAccept)) {
+				return MediaType.parseMediaTypes(List.of(methodLevelAccept));
 			}
 
-			if (!ObjectUtils.isEmpty(value1)) {
-				return MediaType.parseMediaTypes(Arrays.asList(value1));
+			String[] typeLevelAccept = (typeAnnotation != null ? typeAnnotation.accept() : null);
+			if (!ObjectUtils.isEmpty(typeLevelAccept)) {
+				return MediaType.parseMediaTypes(List.of(typeLevelAccept));
 			}
 
 			return null;
+		}
+
+		private static List<AnnotationDescriptor> getAnnotationDescriptors(AnnotatedElement element) {
+			return MergedAnnotations.from(element, SearchStrategy.TYPE_HIERARCHY, RepeatableContainers.none())
+					.stream(HttpExchange.class)
+					.filter(MergedAnnotationPredicates.firstRunOf(MergedAnnotation::getAggregateIndex))
+					.map(AnnotationDescriptor::new)
+					.distinct()
+					.toList();
+		}
+
+
+		private static class AnnotationDescriptor {
+
+			private final HttpExchange httpExchange;
+			private final MergedAnnotation<?> root;
+
+			AnnotationDescriptor(MergedAnnotation<HttpExchange> mergedAnnotation) {
+				this.httpExchange = mergedAnnotation.synthesize();
+				this.root = mergedAnnotation.getRoot();
+			}
+
+			@Override
+			public boolean equals(Object obj) {
+				return (obj instanceof AnnotationDescriptor that && this.httpExchange.equals(that.httpExchange));
+			}
+
+			@Override
+			public int hashCode() {
+				return this.httpExchange.hashCode();
+			}
+
+			@Override
+			public String toString() {
+				return this.root.synthesize().toString();
+			}
 		}
 
 	}
@@ -351,6 +396,7 @@ final class HttpServiceMethod {
 			@Nullable ReactiveAdapter returnTypeAdapter,
 			boolean blockForOptional, @Nullable Duration blockTimeout) implements ResponseFunction {
 
+		@Override
 		@Nullable
 		public Object execute(HttpRequestValues requestValues) {
 
